# programming-python

./: .gitignore  README.md
euler/: euler_004.py  euler_005.py  pyproject.toml
euler/euler/: __init__.py  euler_001.py  euler_002.py  euler_003.py  euler_004.py  euler_005.py
euler/tests/: test_euler1_10.py  test_euler_001.py  test_euler_002.py  test_euler_003.py  test_euler_004.py  test_euler_005.py
exercise-tracker/: README.md  pyproject.toml
exercise-tracker/tests/: test_app.py
file-metadata/: README.md  main.py  pyproject.toml  test_main.py
file-metadata/config/: settings.py
file-metadata/templates/: form.j2
general/: README.md
general/django/: README.md
general/django/exercise-tracker/: README.md  pyproject.toml
general/django/exercise-tracker/api/: models.py  serializers.py  tests.py  urls.py  views.py
general/django/exercise-tracker/api/migrations/: 0001_initial.py
general/django/exercise-tracker/config/: settings.py
general/django/exercise-tracker/front/: tests.py  urls.py  views.py
general/django/file-metadata/: README.md  pyproject.toml
general/django/file-metadata/api/: serializers.py  tests.py  urls.py  views.py
general/django/file-metadata/config/: settings.py  urls.py
general/django/file-metadata/front/: tests.py  urls.py  views.py
general/django/request-header/: README.md  pyproject.toml
general/django/timestamp/: README.md  pyproject.toml
general/django/timestamp/api/: serializers.py  tests.py  urls.py  utils.py  views.py
general/django/url-shortener/: README.md  pyproject.toml
general/django/url-shortener/api/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
general/django/url-shortener/api/migrations/: 0001_initial.py
general/django/url-shortener/config/: settings.py
general/fastapi/: README.md
general/fastapi/exercise-tracker/: README.md  pyproject.toml
general/fastapi/exercise-tracker/app/: crud.py  main.py  models.py  schemas.py
general/fastapi/exercise-tracker/app/templates/: form.j2
general/fastapi/file-metadata/: README.md  main.py  pyproject.toml
general/fastapi/qr-code-generator/: README.md  main.py  pyproject.toml  test_main.py
general/fastapi/request-header/: README.md  main.py  pyproject.toml
general/fastapi/timestamp/: README.md  pyproject.toml
general/fastapi/url-shortener/: README.md  pyproject.toml
general/fastapi/url-shortener/app/: crud.py  schemas.py  utils.py
general/generic/polygon-area-calculator/: shape_calculator.py
generic/budget-app/: budget.py
generic/probability-calculator/: prob_calculator.py
mixed/: README.md
mixed/django/file-metadata/: README.md
mixed/django/request-header/: README.md
mixed/django/request-header/api/: urls.py  views.py
mixed/django/request-header/config/: settings.py
mixed/django/timestamp/config/: settings.py
mixed/fastapi/file-metadata/: test_main.py
mixed/fastapi/file-metadata/resources/: test.json
mixed/fastapi/timestamp/: README.md
mixed/fastapi/url-shortener/: pyproject.toml
mixed/generic/: README.md
request-header/: README.md  main.py  pyproject.toml  test_main.py
request-header/api/: serializers.py  tests.py
timestamp/: README.md  main.py  pyproject.toml  test_main.py
timestamp/config/: settings.py
url-shortener/: README.md  pyproject.toml
url-shortener/app/: main.py  models.py  schemas.py
url-shortener/config/: settings.py
url-shortener/tests/: test_app.py
