[project]
name = "euler"
version = "0.1.0"
description = "A series of challenging mathematical/computer programming problems."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "ruff>=0.11.10,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
