[tool.poetry]
name = "exercise-tracker"
version = "0.1.0"
description = "Exercise Tracker from FreeCodeCamp BEDAAPIs certification."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.29"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
