[project]
name = "exercise-tracker"
version = "0.1.0"
description = "Exercise Tracker from FreeCodeCamp BEDAAPIs certification."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.12.0"
dependencies = [
    "Django>=3.2.9,<4",
    "djangorestframework>=3.12.4,<4",
    "django-cors-headers>=3.11.0,<4",
]

[dependency-groups]
dev = [
    "flake8>=4.0.1,<5",
    "black>=22.1.0,<23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
