[project]
name = "file-metadata"
version = "0.1.0"
description = "File Metadata Microservice from FreeCodeCamp BEDAAPIs certification."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10.0"
dependencies = [
    "fastapi>=0.70.0,<0.71",
    "uvicorn[standard]>=0.15.0,<0.16",
    "python-multipart>=0.0.5,<0.0.6",
    "Jinja2>=3.0.3,<4",
]

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7",
    "requests>=2.26.0,<3",
    "black~=21.12b0",
    "flake8>=4.0.1,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
