[tool.poetry]
name = "qr-code-generator"
version = "0.1.0"
description = ""
authors = ["Daniel Alamilla <daniel.alamilla.co@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pyqrcode = "^1.2.1"
asyncer = "^0.0.8"
pypng = "^0.20220715.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
