[project]
name = "qr-code-generator"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Alamilla", email = "daniel.alamilla.co@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.4,<0.116",
    "pyqrcode>=1.2.1,<2",
    "asyncer>=0.0.8,<0.0.9",
    "pypng>=0.20220715.0,<0.20220716",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "black>=24.10.0,<25",
    "flake8>=7.1.1,<8",
    "httpx>=0.27.2,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
