[project]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener Microservice from FreeCodeCamp BEDAAPIs certification."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10.0"
dependencies = [
    "fastapi>=0.70.0,<0.71",
    "uvicorn[standard]>=0.15.0,<0.16",
    "SQLAlchemy>=1.4.29,<2",
    "python-multipart>=0.0.5,<0.0.6",
]

[dependency-groups]
dev = [
    "black~=21.12b0",
    "requests>=2.27.1,<3",
    "pytest>=6.2.5,<7",
    "flake8>=4.0.1,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
